# HospitalFinder

./: CMakeLists.txt  README.md
include/: functions.h  project.h
src/: comments.txt  main.c
